--- a/index.html
+++ b/index.html
@@ -638,7 +638,11 @@
       </div>
     </section>
 
-    
+    <footer class="bg-dark text-white py-4">
+      <div class="container">
+        <p class="text-center">&copy; 2024 all right reserved.</p>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
